hopefully fixed the mobile text cutoff issue

--- a/src/components/Projects/AES/Aes.scss
+++ b/src/components/Projects/AES/Aes.scss
@@ -9,6 +9,9 @@ $outside-border-stroke: 2 * $border-stroke;
 .vueperslide__content-wrapper:not(.vueperslide__content-wrapper--outside-top):not(.vueperslide__content-wrapper--outside-bottom) {
   // display: block;
 }
+.vueperslide__content-wrapper.parallax-fixed-content, .vueperslide__content-wrapper:not(.vueperslide__content-wrapper--outside-top):not(.vueperslide__content-wrapper--outside-bottom) {
+  display: -webkit-box;
+}
 
 ol {
   list-style-position: inside;
